@@ -1,3 +1,4 @@
+lblItemsPerPage = Items per page:
 lblImageServerAddress = Image Server Address
 lblRegularExpression = Regular Expression
 lblIncludeImage = Include Pictures
