@@ -1,3 +1,5 @@
+msgLoginFailed=You could not be logged in
+msgLoginFailedDetails=Invalid credentials were provided. Please enter the correct username and password.
 msgDeletePicturesConfirmation = Are you sure you want to permanently delete the selected pictures?
 msgDeletePictureConfirmation = Are you sure you want to permanently delete the selected picture?
 msgDeleteAttachmentsConfirmation = Are you sure you want to permanently delete the selected attachments?
