@@ -1,3 +1,6 @@
+lblItemsPerPage=Items per pagina:
+msgLoginFailed=Aanmelden is mislukt
+msgLoginFailedDetails=De opgegeven username en/of het wachtwoord is onjuist. Corrigeer de aanmeldgegevens en probeet her opnieuw.
 lblEditTab = Edit Tab
 msgDeleteAttachmentsConfirmation = Weet u zeker dat u de geselecteerde bijlages wilt verwijderen?
 msgDeleteAttachmentConfirmation = Weet u zeker dat u het geselecteerde bijlage wilt verwijderen?
